tests/errors/syn.missing-rbrace.init-list.or
main :: () -> void {
    x := .{5;
};
